# trained-dream-archive

./: README_DREAM_GENERATOR.md  dream_api_server.py  dream_generator.py  dreams_bird_posts.json  dreams_cat_posts.json  dreams_deer_posts.json  dreams_dog_posts.json  dreams_elephant_posts.json  dreams_fish_posts.json  dreams_flower_posts.json  dreams_horse_posts.json  dreams_rabbit_posts.json  dreams_snake_posts.json  dreams_top_posts.json  gesture.py  index.html  index3.html  index_enhanced.html  main.py  pyproject.toml  redditscrape.py  setup_and_run.py  sketch.js  sketch_enhanced.js
my_model/: metadata.json
